prusti-tests/tests/verify_overflow/fail/extern-spec/traits/duplicate-2.rs
use prusti_contracts::*;

#[extern_spec]
trait Iterator {
    #[requires(true)]
    fn next(&mut self) -> Option<Self::Item>;
}

#[extern_spec]
trait Iterator { 
    #[requires(true)]
    fn next(&mut self) -> Option<Self::Item>; //~ ERROR: duplicate specification for std::iter::Iterator::next
}

fn main() {}
